2006-01-07 Scott Dattalo <scott@dattalo.com>
	* regression/resistor/resistor.asm: Tiny comment change
	* regression/run_regression.ch: Added the resistor regression test
	to the test suite.
	
2006-01-07 Roy Rankin <rrankin@ihug.com.au>
	* modules/resistor.cc: Pulldown resistor voltage is now set to 0
	Volts.
	* src/stimulus.h, src/stimuli.cc: Adjusted default resistance
	values for stimuli to more closely match PIC I/O pins.
	* regression/resistor/resistor.asm: Set pulldown resistance for
	the pulldown resistor.
	
2006-01-06 Roy Rankin <rrankin@ihug.com.au>
	* src/stimuli.cc: Fixed crash regarding module pin names.
	* regression/resistor/Makefile: New regression test for the
	resistor module.
	* regression/resistor/resistor.asm:
	* regression/resistor/resistor.stc:
	* regression/resistor/16f873.lkr:


2006-01-02 Scott Dattalo <scott@dattalo.com>
	* src/ui.h, src/ui.cc: added another method for formatting
	registers (though this might be removed later).
	* src/value.h, src/value.cc: Moved Value specific breakpoint
	functionality to the Value class. Fixed typo in an error message.
	* src/symbol.cc, src/symbol.h: Fixed a bug with clearing the symbol table.
	 - Added breakpoint expression compilation to the register_symbol
	 class (this was previously being handled in cli/cmd_break.cc).
	 - The w_symbol now is printed out as a W register.
	* src/module.h, src/processor.h: moved the register_size and
	register_mask methods from the processor class to the module
	class. (Modules can have regsiters too!).
	* src/p16x7x.cc, src/p16x6x.cc, src/p16x5x.cc, src/p16f87x.cc,
	src/p16f62x.cc, src/16bit-processors.cc, src/14bit-processors.cc: 
	W was not getting added to the symbol table.
	* src/gpsim_time.cc: stopwatch changes to conform to value class api.
	* src/breakpoints.cc, src/breakpoints.h: cleaned up/fixed printout of
	register breakpoints. Added a more generic 'set_break()' method
	that replaces several other specific methods (the old ones haven't
	been removed yet).